Improve CSS readability and html classes. Fix image responsiveness.

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,15 @@ body {
 	font-weight: 300;
 }
 
-img, embed, object, video {
+img, 
+embed, 
+object, 
+video {
 	max-width: 100%;
 }
 
-nav a, button {
+nav a, 
+button {
 	min-width: 48px;
 	min-height: 48px;
 }
@@ -33,7 +37,9 @@ hr {
 	color: #7d97ad;
 }
 
-h1, h3, p {
+h1, 
+h3, 
+p {
 	color: #2d3c49;
 }
 
@@ -41,27 +47,23 @@ h2 {
 	color: #7d97ad;
 }
 
-#logo {
-	width: 165px;
-	height: 140px;
+.logo {
+	max-width: 165px;
 	float: left;
 }
 
-#main-pic {
-	width: 100%;
-}
-
-#profile-fig {
-	margin-bottom: 20px;
+.img-responsive {
+	margin: 0 auto;
 }
 
 .img-project {
-	width: 100%;
-	height: 300px;
+	margin: 0 auto;
+	height: 200px;
 }
 
 footer {
+	min-height: 50px;
 	font-size: 1.5em;
-	margin-top: 10px;
+	margin-top: 20px;
 	margin-bottom: 20px;
 }
